--- a/package.json
+++ b/package.json
@@ -93,8 +93,8 @@
     "test": "yarn test:unit",
     "test:unit": "cypress run --component --browser=chrome",
     "test:unit:dev": "cypress open --component",
-    "type-check": "vue-tsc --noEmit",
-    "type-generation": "vue-tsc --project tsconfig.build.json",
+    "type-check": "vue-tsc --noEmit -p tsconfig.build.json",
+    "type-generation": "vue-tsc -p tsconfig.build.json",
     "lint": "eslint . --fix",
     "format": "prettier --write src/",
     "prepare": "yarn build",
