--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -7,9 +7,12 @@
     "outDir": "./dist",
     "rootDir": "./src"
   },
-  "include": ["src/main.ts", "src/grid.ts"],
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.vue"
+  ],
   "exclude": [
-    "src/**/__tests__/*",
+    "src/**/__tests__/**",
     "src/**/*.spec.ts",
     "src/**/*.cy.ts",
     "**/*.stories.ts",
