--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@OnroerendErfgoed/vue_component_library",
-  "version": "4.0.0",
+  "version": "4.0.0-alpha.2",
   "description": "Vue 3 component library for Onroerend Erfgoed applications, built on Govflanders Webuniversum design system",
   "type": "module",
   "files": [
@@ -55,8 +55,8 @@
     "./eslint": {
       "import": "./dist/eslint.config.js"
     },
-    "./dist/vue-components.css": "./dist/vue-components.css",
-    "./dist/scss/main.scss": "./dist/scss/main.scss"
+    "./vue-components.css": "./dist/vue-components.css",
+    "./scss/main.scss": "./dist/scss/main.scss"
   },
   "repository": {
     "type": "git",
@@ -107,52 +107,53 @@
     "pyoes": "https://gitpkg.now.sh/OnroerendErfgoed/pyoes/npm-packages/pyoes?0.25.0"
   },
   "peerDependencies": {
+    "vue": "^3.4.0",
+    "pinia": "^2.1.7",
+    "vue-i18n": "^9.0.0",
+    "lodash-es": "^4.17.21",
+    "@govflanders/vl-ui-design-system-style": "~3.2.3",
+    "@govflanders/vl-ui-design-system-vue3": "~8.0.2",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/vue-fontawesome": "^3.1.2",
-    "@govflanders/vl-ui-core": "~3.2.3",
-    "@govflanders/vl-ui-design-system-style": "~3.2.3",
-    "@govflanders/vl-ui-design-system-vue3": "~8.0.2",
-    "@soerenmartius/vue3-clipboard": "^0.1.2",
-    "@tinymce/tinymce-vue": "^4",
     "@vuelidate/core": "^2.0.2",
     "@vuelidate/validators": "^2.0.2",
-    "@vueuse/core": "^10.4.1",
-    "ag-grid-vue3": "^34.0.0",
+    "date-fns": "^2.30.0",
+    "libphonenumber-js": "^1.10.37",
     "axios": "^1.12.0",
     "axios-mock-adapter": "^1.22.0",
-    "date-fns": "^2.30.0",
-    "jsts": "2.7.2",
-    "libphonenumber-js": "^1.10.37",
-    "lodash-es": "^4.17.21",
+    "ag-grid-vue3": "^34.0.0",
     "ol": "^7.4.0",
-    "pinia": "^2.1.7",
+    "jsts": "2.7.2",
     "proj4": "^2.9.0",
+    "@tinymce/tinymce-vue": "^4",
     "quill": "^2.0.0",
     "quill-html-edit-button": "^3.0.0",
     "quill-toggle-fullscreen-button": "^0.1.3",
-    "vue": "^3.4.0",
-    "vue-i18n": "^9.0.0",
-    "vue-quilly": "^1.0.5"
+    "vue-quilly": "^1.0.5",
+    "@soerenmartius/vue3-clipboard": "^0.1.2",
+    "@vueuse/core": "^10.4.1",
+    "postcss": "^8.4.16"
   },
   "peerDependenciesMeta": {
+    "@vuelidate/core": { "optional": true },
+    "@vuelidate/validators": { "optional": true },
+    "date-fns": { "optional": true },
+    "libphonenumber-js": { "optional": true },
     "axios": { "optional": true },
     "axios-mock-adapter": { "optional": true },
     "ag-grid-vue3": { "optional": true },
-    "date-fns": { "optional": true },
-    "jsts": { "optional": true },
-    "libphonenumber-js": { "optional": true },
-    "proj4": { "optional": true },
     "ol": { "optional": true },
-    "@vuelidate/core": { "optional": true },
-    "@vuelidate/validators": { "optional": true },
-    "@soerenmartius/vue3-clipboard": { "optional": true },
+    "jsts": { "optional": true },
+    "proj4": { "optional": true },
     "@tinymce/tinymce-vue": { "optional": true },
-    "@vueuse/core": { "optional": true },
     "quill": { "optional": true },
     "quill-html-edit-button": { "optional": true },
     "quill-toggle-fullscreen-button": { "optional": true },
-    "vue-quilly": { "optional": true }
+    "vue-quilly": { "optional": true },
+    "@soerenmartius/vue3-clipboard": { "optional": true },
+    "@vueuse/core": { "optional": true },
+    "postcss": { "optional": true }
   },
   "devDependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
