--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
   "exclude": ["src/stories/**"],
   "compilerOptions": {
     "outDir": "dist",
-    "rootDir": ".",
+    "rootDir": "./",
     "paths": {
       "@components/*": ["./src/components/*"],
       "@composables/*": ["./src/composables/*"],
