--- a/package.json
+++ b/package.json
@@ -107,53 +107,89 @@
     "pyoes": "https://gitpkg.now.sh/OnroerendErfgoed/pyoes/npm-packages/pyoes?0.25.0"
   },
   "peerDependencies": {
-    "vue": "^3.4.0",
-    "pinia": "^2.1.7",
-    "vue-i18n": "^9.0.0",
-    "lodash-es": "^4.17.21",
-    "@govflanders/vl-ui-design-system-style": "~3.2.3",
-    "@govflanders/vl-ui-design-system-vue3": "~8.0.2",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/vue-fontawesome": "^3.1.2",
+    "@govflanders/vl-ui-design-system-style": "~3.2.3",
+    "@govflanders/vl-ui-design-system-vue3": "~8.0.2",
+    "@soerenmartius/vue3-clipboard": "^0.1.2",
+    "@tinymce/tinymce-vue": "^4",
     "@vuelidate/core": "^2.0.2",
     "@vuelidate/validators": "^2.0.2",
-    "date-fns": "^2.30.0",
-    "libphonenumber-js": "^1.10.37",
+    "@vueuse/core": "^10.4.1",
+    "ag-grid-vue3": "^34.0.0",
     "axios": "^1.12.0",
     "axios-mock-adapter": "^1.22.0",
-    "ag-grid-vue3": "^34.0.0",
-    "ol": "^7.4.0",
+    "date-fns": "^2.30.0",
     "jsts": "2.7.2",
+    "libphonenumber-js": "^1.10.37",
+    "lodash-es": "^4.17.21",
+    "ol": "^7.4.0",
+    "pinia": "^2.1.7",
+    "postcss": "^8.4.16",
     "proj4": "^2.9.0",
-    "@tinymce/tinymce-vue": "^4",
     "quill": "^2.0.0",
     "quill-html-edit-button": "^3.0.0",
     "quill-toggle-fullscreen-button": "^0.1.3",
-    "vue-quilly": "^1.0.5",
-    "@soerenmartius/vue3-clipboard": "^0.1.2",
-    "@vueuse/core": "^10.4.1",
-    "postcss": "^8.4.16"
+    "vue": "^3.4.0",
+    "vue-i18n": "^9.0.0",
+    "vue-quilly": "^1.0.5"
   },
   "peerDependenciesMeta": {
-    "@vuelidate/core": { "optional": true },
-    "@vuelidate/validators": { "optional": true },
-    "date-fns": { "optional": true },
-    "libphonenumber-js": { "optional": true },
-    "axios": { "optional": true },
-    "axios-mock-adapter": { "optional": true },
-    "ag-grid-vue3": { "optional": true },
-    "ol": { "optional": true },
-    "jsts": { "optional": true },
-    "proj4": { "optional": true },
-    "@tinymce/tinymce-vue": { "optional": true },
-    "quill": { "optional": true },
-    "quill-html-edit-button": { "optional": true },
-    "quill-toggle-fullscreen-button": { "optional": true },
-    "vue-quilly": { "optional": true },
-    "@soerenmartius/vue3-clipboard": { "optional": true },
-    "@vueuse/core": { "optional": true },
-    "postcss": { "optional": true }
+    "@vuelidate/core": {
+      "optional": true
+    },
+    "@vuelidate/validators": {
+      "optional": true
+    },
+    "date-fns": {
+      "optional": true
+    },
+    "libphonenumber-js": {
+      "optional": true
+    },
+    "axios": {
+      "optional": true
+    },
+    "axios-mock-adapter": {
+      "optional": true
+    },
+    "ag-grid-vue3": {
+      "optional": true
+    },
+    "ol": {
+      "optional": true
+    },
+    "jsts": {
+      "optional": true
+    },
+    "proj4": {
+      "optional": true
+    },
+    "@tinymce/tinymce-vue": {
+      "optional": true
+    },
+    "quill": {
+      "optional": true
+    },
+    "quill-html-edit-button": {
+      "optional": true
+    },
+    "quill-toggle-fullscreen-button": {
+      "optional": true
+    },
+    "vue-quilly": {
+      "optional": true
+    },
+    "@soerenmartius/vue3-clipboard": {
+      "optional": true
+    },
+    "@vueuse/core": {
+      "optional": true
+    },
+    "postcss": {
+      "optional": true
+    }
   },
   "devDependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
@@ -202,6 +238,7 @@
     "jsts": "2.7.2",
     "libphonenumber-js": "^1.10.37",
     "lodash-es": "^4.17.21",
+    "marked": "^17.0.0",
     "npm-run-all": "^4.1.5",
     "ol": "^7.4.0",
     "path": "^0.12.7",
