--- a/.github/workflows/pre-release-package-manual.yml
+++ b/.github/workflows/pre-release-package-manual.yml
@@ -15,14 +15,23 @@ jobs:
       - uses: actions/checkout@v4
         with:
           ref: develop # Always checkout the develop branch
-      - uses: actions/setup-node@v4
+
+      - name: Setup Node.js for npmjs.org
+        uses: actions/setup-node@v4
         with:
+          node-version: '22'
+          registry-url: 'https://registry.npmjs.org'
           always-auth: true
-          node-version: 22
-          registry-url: https://registry.npmjs.org
+
+      - name: Configure GitHub Package Registry
+        run: |
+          echo "@OnroerendErfgoed:registry=https://npm.pkg.github.com" >> .npmrc
+          echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" >> .npmrc
+
       - name: Update version in package.json
         run: |
           jq ".version = \"${{ inputs.version }}\"" package.json > package.json.tmp && mv package.json.tmp package.json
+
       - name: Commit updated package.json
         run: |
           git config --global user.name "github-actions[bot]"
@@ -32,10 +41,14 @@ jobs:
           git push origin develop # Always push to the develop branch
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - run: yarn ci
+
+      - name: Install dependencies
+        run: yarn ci
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GOVFLANDERS_NPM_TOKEN }}
+
       - run: yarn build
+
       - uses: actions/upload-artifact@v4
         with:
           name: dist
@@ -52,21 +65,23 @@ jobs:
       - uses: actions/checkout@v4
         with:
           ref: develop # Always checkout the develop branch
+
       - uses: actions/download-artifact@v4
         with:
           name: dist
           path: dist/
+
       - name: Display folder structure
         run: ls -R
-      - name: Build and publish
+
+      - name: Setup Node.js for GitHub Packages
         uses: actions/setup-node@v4
         with:
+          node-version: '22'
+          registry-url: 'https://npm.pkg.github.com'
           always-auth: true
-          node-version: 22
-          registry-url: https://npm.pkg.github.com/
-      - run: |
-          echo @OnroerendErfgoed:registry=https://npm.pkg.github.com/ > ~/.npmrc
-          echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" >> ~/.npmrc
-          yarn publish --tag alpha --non-interactive
+
+      - name: Publish to GitHub Packages
+        run: yarn publish --tag alpha --non-interactive
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
