--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -10,15 +10,26 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
+
+      - name: Setup Node.js for npmjs.org
+        uses: actions/setup-node@v4
         with:
+          node-version: '22'
+          registry-url: 'https://registry.npmjs.org'
           always-auth: true
-          node-version: 22
-          registry-url: https://registry.npmjs.org
-      - run: yarn ci
+
+      - name: Configure GitHub Package Registry
+        run: |
+          echo "@OnroerendErfgoed:registry=https://npm.pkg.github.com" >> .npmrc
+          echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" >> .npmrc
+
+      - name: Install dependencies
+        run: yarn ci
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.GOVFLANDERS_NPM_TOKEN}}
+          NODE_AUTH_TOKEN: ${{ secrets.GOVFLANDERS_NPM_TOKEN }}
+
       - run: yarn build
+
       - uses: actions/upload-artifact@v4
         with:
           name: dist
@@ -33,22 +44,23 @@ jobs:
       contents: read
     steps:
       - uses: actions/checkout@v4
+
       - uses: actions/download-artifact@v4
         with:
           name: dist
           path: dist/
+
       - name: Display folder structure
         run: ls -R
-      - name: Build and publish
+
+      - name: Setup Node.js for GitHub Packages
         uses: actions/setup-node@v4
         with:
+          node-version: '22'
+          registry-url: 'https://npm.pkg.github.com'
           always-auth: true
-          node-version: 22
-          registry-url: https://npm.pkg.github.com/
-      - run: |
-          echo @OnroerendErfgoed:registry=https://npm.pkg.github.com/ > ~/.npmrc
-          echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" >> ~/.npmrc
-      - run: cat ~/.npmrc
-      - run: yarn publish
+
+      - name: Publish to GitHub Packages
+        run: yarn publish
         env:
-          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
