--- a/package.json
+++ b/package.json
@@ -102,7 +102,7 @@
     "chromatic": "npx chromatic --project-token=CHROMATIC_PROJECT_TOKEN"
   },
   "dependencies": {
-    "@OnroerendErfgoed/pyoes": "0.25.1-alpha.1",
+    "@OnroerendErfgoed/pyoes": "^0.25.1",
     "guid-typescript": "^1.0.9"
   },
   "peerDependencies": {
