#491 Add deelgemeente to duplicate streets

--- a/package.json
+++ b/package.json
@@ -109,8 +109,8 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/vue-fontawesome": "^3.1.2",
-    "@govflanders/vl-ui-design-system-style": "~3.2.3",
-    "@govflanders/vl-ui-design-system-vue3": "~8.0.2",
+    "@govflanders/vl-ui-design-system-style": "~3.2.6",
+    "@govflanders/vl-ui-design-system-vue3": "~8.0.5",
     "@soerenmartius/vue3-clipboard": "^0.1.2",
     "@tinymce/tinymce-vue": "^4",
     "@vuelidate/core": "^2.0.2",
@@ -194,8 +194,8 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/vue-fontawesome": "^3.1.2",
-    "@govflanders/vl-ui-design-system-style": "~3.2.3",
-    "@govflanders/vl-ui-design-system-vue3": "~8.0.2",
+    "@govflanders/vl-ui-design-system-style": "^3.2.6",
+    "@govflanders/vl-ui-design-system-vue3": "^8.0.5",
     "@intlify/unplugin-vue-i18n": "^0.10.0",
     "@rushstack/eslint-patch": "^1.2.0",
     "@soerenmartius/vue3-clipboard": "^0.1.2",
@@ -209,7 +209,7 @@
     "@storybook/testing-library": "^0.2.2",
     "@storybook/vue3-vite": "^8.4.7",
     "@tinymce/tinymce-vue": "^4",
-    "@trivago/prettier-plugin-sort-imports": "4.1.0",
+    "@trivago/prettier-plugin-sort-imports": "^6.0.0",
     "@tsconfig/node20": "^20.1.4",
     "@types/jsts": "^0.17.22",
     "@types/lodash-es": "^4.17.12",
