--- a/package.json
+++ b/package.json
@@ -90,9 +90,11 @@
     "build:watch": "run-p type-check build-only:watch",
     "build-only": "vite build",
     "build-only:watch": "vite build --watch",
-    "test": "yarn test:unit",
+    "test": "yarn test:unit && yarn test:vitest",
     "test:unit": "cypress run --component --browser=chrome",
     "test:unit:dev": "cypress open --component",
+    "test:vitest": "vitest run",
+    "test:vitest:watch": "vitest watch",
     "type-check": "vue-tsc --noEmit -p tsconfig.build.json",
     "type-generation": "vue-tsc -p tsconfig.build.json",
     "lint": "eslint . --fix",
@@ -234,6 +236,7 @@
     "eslint": "^9.17.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-vue": "^9.32.0",
+    "jsdom": "^27.3.0",
     "jsts": "2.7.2",
     "libphonenumber-js": "^1.10.37",
     "lodash-es": "^4.17.21",
@@ -260,6 +263,7 @@
     "typescript": "^5.7.2",
     "vite": "^5.4.10",
     "vite-plugin-static-copy": "^1.0.6",
+    "vitest": "^4.0.15",
     "vue": "^3.5.13",
     "vue-eslint-parser": "^9.1.1",
     "vue-i18n": "9",
